creat two more api
