# src/routes/data.routes.js
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 // local imports
-import { CreateData, getAllData, DeteleOneData, updateOneData, DataCounsts, vulnerableItems, VulnerableRiskRating } from '../controller/Data.controller.js';
+import { CreateData, getAllData, DeteleOneData, updateOneData, DataCounsts, vulnerableItems, VulnerableRiskRating, NewAndCloseVulnerable, ClosevulnerableItems } from '../controller/Data.controller.js';
 import { upload } from '../config/multer.config.js';
 import { Authentication } from '../middleware/Authentication.js';
 
@@ -13,5 +13,7 @@ routes.route('/update/:id').get(Authentication, updateOneData);
 routes.route('/total-data-count').get(Authentication, DataCounsts);
 routes.route('/vulnerableItems').get(Authentication, vulnerableItems);
 routes.route('/VulnerableRiskRating').get(Authentication, VulnerableRiskRating);
+routes.route('/NewAndCloseVulnerable').get(Authentication, NewAndCloseVulnerable);
+routes.route('/ClosevulnerableItems').get(Authentication, ClosevulnerableItems);
 
 export default routes;
